--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ package.json
 /.idea
 /.vagrant
 storage/framework/sessions/*
-storage/logs/laravel.log
+storage/logs/*
 storage/framework/views/*
 cron/test.php
 vendor/composer/*
